$Id$

2012-11-17  Alex Samorukov  <samm@os2.kiev.ua>
	smartd.cpp: print lu_id for SPC devices, it is supported by standard
	smartd.cpp: added initial state file support for the SCSI devices
	smartd.cpp: add S/N to SCSI device identifier, lu_id is not available
	on some drives.
	smartd.cpp: fix warning for SCSI drives with self test in progress (#249)

2012-11-09  Christian Franke  <franke@computer.org>

	Windows smartd: Allow quoting of '-M exec' argument
	to support path names with spaces.

2012-11-09  Christian Franke  <franke@computer.org>

	ataprint.cpp: Rework smartctl -l directory output.
	Add R/W, R/O info.  Report identical logs in one line.

2012-11-09  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: adding handling of SCSI devices exported with mfip
	driver. FreeBSD changing PDT code to 0x1f and we are changing it back
	to 0x00 (direct-access block device).
	os_freebsd.cpp: improved error handling for the ATA devices

2012-11-04  Christian Franke  <franke@computer.org>

	drivedb.h:
	- SandForce Driven SSDs: Mushkin Chronos
	- Indilinx Everest/Martini based SSDs: OCZ AGILITY4
	- Intel 710 Series SSDs: Add attribute 174
	- JMicron based SSDs: KINGSTON SSDNOW 30GB
	- Hitachi Deskstar 7K1000.C: *CLA330
	- Seagate DiamondMax 23, Barracuda 7200.12, 7200.14 (AF),
	  LP, Green (AF): no warnings for newer firmware versions
	- Western Digital Caviar Green (AF, SATA 6Gb/s): rename, add 1TB
	- USB: Toshiba Stor.E (0x0930:0x0b1[9a])
	- USB: Verbatim Store'n'Go (0x18a5:0x022b)

2012-11-02  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: disabling 48bit commands on legacy ATA controllers
	in ATACAM mode because of kernel bug.

2012-10-31  Christian Franke  <franke@computer.org>

	atacmdnames.cpp: Update for ATA-8-ACS, ACS-2, ACS-3.
	ataidentify.cpp: Mark retired/obsolete values.
	ataprint.cpp: Add new ACS-3 logs, mark obsolete logs.

2012-10-27  Alex Samorukov <samm@os2.kiev.ua>

	os_freebsd.cpp: Have smartd prefer real device names over passN.